@@ -95,6 +95,26 @@ public class Foo {
     </test-code>
     <test-code>
         <description><![CDATA[
+concatenates all escaped characters
+     ]]></description>
+        <expected-problems>8</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void bar(StringBuffer sb) {
+  sb.append("\n");
+  sb.append("\t");
+  sb.append("\b");
+  sb.append("\r");
+  sb.append("\f");
+  sb.append("\\");
+  sb.append("\'");
+  sb.append("\"");
+ }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
 concatenates a single upper case
      ]]></description>
         <expected-problems>1</expected-problems>
@@ -141,6 +161,33 @@ concatenates two characters
 public class Foo {
  public void bar(StringBuffer sb) {
   sb.append("/t");
+ }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
+a single octal character
+     ]]></description>
+        <expected-problems>2</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void bar(StringBuffer sb) {
+  sb.append("\12");
+  sb.append("\123");
+ }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
+octal character in longer string
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void bar(StringBuffer sb) {
+  sb.append("\1234");
  }
 }
      ]]></code>
